# python-network

./: .gitignore  README  README.md  config.doxygen  network.py  parse  requirements.txt  setup.cfg  setup.py
debian/: changelog  control  copyright  python3-network-doc.docs  python3-network-doc.links  python3-network.manpages  rules
debian/tests/: client.py  control  server.py  use
tests/: README.md
