[metadata]
name = network-wrapper
version = 0.3
author = Bas Wijnen
author_email = wijnen@debian.org
description = module for easy networking
long_description = file:README
long_description_content_type = text/plain
license = AGPL3+
license_file = debian/copyright
url = https://github.com/wijnen/python-network
project_urls =
	Bug Tracker = https://github.com/wijnen/python-network/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Intended Audience :: Developers
	Development Status :: 4 - Beta
	Operating System :: OS Independent
	Topic :: System :: Networking

[options]
py_modules = network
python_requires = >=3
install_requires = fhs-paths
